--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,12 @@
         <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>com.bskhq.tasktrackercli.TaskTrackerCli</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.0</version> 
+            <scope>test</scope>
+        </dependency> 
+    </dependencies>
 </project>
